# parakeet-eot-python

./: .gitignore  LICENSE  NOTICE  README.md  example.py  example_audio_file.py  requirements.txt
checkpoints/: tokenizer.json
checkpoints/parakeet-eou/: README.md
parakeet-rs/: Cargo.toml  LICENSE
parakeet-rs/src/: audio.rs  config.rs  decoder.rs  decoder_tdt.rs  error.rs  execution.rs  lib.rs  model.rs  model_eou.rs  model_tdt.rs  parakeet.rs  parakeet_eou.rs  parakeet_tdt.rs  sortformer.rs  timestamps.rs  transcriber.rs  vocab.rs
scripts/: quantize_onnx_partial.py  quantize_onnx_partial_uint8.py
src/: __init__.py  model_eou.py  parakeet_eou.py  recording.py  tokenizer.py  utils.py
