[package]
name = "parakeet-rs"
version = "0.2.6"
edition = "2021"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/altunenes/parakeet-rs"
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "parakeet", "onnx", "nvidia"]
categories = ["multimedia::audio", "science"]

[lib]
name = "parakeet_rs"
path = "src/lib.rs"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "ndarray"] }
hound = "3.5"
eyre = "0.6"
ndarray = "0.16"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.4"

[dev-dependencies]

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
sortformer = []
load-dynamic = ["ort/load-dynamic"]